--- a/package.json
+++ b/package.json
@@ -1,9 +1,12 @@
 {
+  "homepage":"https://KoliKalpesh.github.io/quizReact",
   "name": "quizreact",
-  "private": true,
+  "private": false,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
+    "pre-deploy":"npm run build",
+    "deploy":"gh-pages -d dist",
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
